# Jako-powietrza

./: CMakeLists.txt  Doxyfile  Instrukcja uruchomienia.txt  JPO.sln  README.md  README.txt.txt  requirements.txt  requirements.txt.txt
Dokumentacja Dox/html/: _app_8cpp.html  _app_8cpp.js  _app_8h.html  _app_8h_source.html  _c_h_a_n_g_e_l_o_g_8md.html  _c_o_n_t_r_i_b_u_t_i_n_g_8md.html  _curl_8cpp.html  _curl_8cpp.js  _curl_8h.html  _curl_8h.js  _curl_8h_source.html  _j_p_o_2_app_8cpp.html  _j_p_o_2_app_8cpp.js  _j_p_o_2_app_8h.html  _j_p_o_2_app_8h.js  _j_p_o_2_app_8h_source.html  _j_p_o_2_curl_8cpp.html  _j_p_o_2_curl_8cpp.js  _j_p_o_2_curl_8h.html  _j_p_o_2_curl_8h.js  _j_p_o_2_curl_8h_source.html  _j_p_o_2_main_frame_8cpp.html  _j_p_o_2_main_frame_8h.html  _j_p_o_2_main_frame_8h.js  _j_p_o_2_main_frame_8h_source.html  _main_frame_8cpp.html  _main_frame_8h.html  _main_frame_8h_source.html  _plot_panel_8cpp.html  _plot_panel_8h.html  _plot_panel_8h.js  _plot_panel_8h_source.html  _r_e_a_d_m_e_8md.html  alternative__macros_8cpp.html  annotated.html  annotated_dup.js  assert__returns__disabled_8cpp.html  assert__returns__disabled_8cpp_source.html  assert__returns__disabled__evaluate_8cpp.html  assertion__macros_8cpp.html  (+613 more)
Dokumentacja Dox/latex/: _app_8cpp.tex  _app_8h.tex  (+350 more)
Działająca aplikacja/: Jakość powietrza w Polsce.lnk  dane_pomiarowe_20250407_170649.json
JPO/: App.cpp  App.h  Curl.cpp  Curl.h  JPO.vcxproj  JPO.vcxproj.filters  MainFrame.cpp  MainFrame.h  PlotPanel.cpp  PlotPanel.h  dane_pomiarowe_20250405_131414.json  dane_pomiarowe_20250405_131918.json
(+128 files in other folders)
